# scenario_simulator_v2

./: q  .dockerignore  .editorconfig  .gitignore  .linelint.yml  .markdownlint-cli2.jsonc  .textlintrc  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.arm64  Dockerfile.traffic_simulator  Doxyfile  HACKING.md  README.md  RunTestScenarioWithDocker.md  codecov.yml  dependency.repos  dependency_foxy.repos  dependency_galactic.repos  dependency_humble.repos  docker-bake.hcl  docker-entrypoint.sh  entrypoint.bash  export_docker.sh  install_depends.sh  load_image.sh  make-docs.sh  make_docs.sh  mkdocs.yml  pyproject.toml  run.sh  run_docker.bash  sonar-project.properties  test_dependency_humble.repos
analysis/best_model_description/: CMakeLists.txt  package.xml
analysis/best_model_description/config/: mirror.param.yaml  simulator_model.param.yaml  vehicle_info.param.yaml
analysis/best_model_description/mesh/: BYD_J6.dae
analysis/best_model_description/urdf/: vehicle.xacro
analysis/best_model_launch/: CMakeLists.txt  package.xml
analysis/best_model_launch/config/: accel_brake_map_calibrator.param.yaml  raw_vehicle_cmd_converter.param.yaml  raw_vehicle_cmd_converter.regeneration.param.yaml  raw_vehicle_cmd_converter.sub.param.yaml
analysis/best_model_launch/launch/: vehicle_interface.launch.xml
common/agnocast_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/agnocast_wrapper/cmake/: agnocast_wrapper_setup_target.cmake
common/geometry_math/: CMakeLists.txt  package.xml
common/geometry_math/src/: bounding_box.cpp  catmull_rom_spline.cpp  catmull_rom_subspline.cpp  collision.cpp  distance.cpp  hermite_curve.cpp  linear_algebra.cpp  polygon.cpp  polynomial_solver.cpp  transform.cpp
common/geometry_math/test/: CMakeLists.txt  test_bounding_box.cpp  test_catmull_rom_spline.cpp  test_collision.cpp  test_distance.cpp  test_hermite_curve.cpp  test_linear_algebra.cpp  test_polygon.cpp  test_polynomial_solver.cpp
common/get_parameter/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/get_parameter/src/: main.cpp
common/ros_ping/: CMakeLists.txt  README.md  package.xml
common/ros_ping/include/: service.hpp
common/ros_ping/src/: ping.cpp  single_ping_node.cpp
common/scenario_simulator_exception/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/scenario_simulator_exception/src/: scenario_simulator_exception.cpp
common/simple_junit/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/simple_junit/src/: test_suites.cpp
common/status_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/status_monitor/src/: status_monitor.cpp
lanelet2/autoware_lanelet2_msgs/: CMakeLists.txt  package.xml
lanelet2/lanelet2_extension/: CMakeLists.txt  README.md  package.xml
lanelet2/lanelet2_extension/lib/: autoware_osm_parser.cpp  autoware_traffic_light.cpp  detection_area.cpp  message_conversion.cpp  mgrs_projector.cpp  query.cpp  road_marking.cpp  utilities.cpp  validation.cpp  visualization.cpp
lanelet2/lanelet2_extension/src/: sample_code.cpp  validation.cpp
map/kashiwanoha_map/: CHANGELOG.rst  CMakeLists.txt  package.xml
map/kashiwanoha_map/map/: global_map_center.pcd.yaml  lanelet2_map.osm  map.map_publisher.yaml
mock/awapi_accessor_example/: CMakeLists.txt  package.xml
mock/awapi_accessor_example/src/: awapi_accessor_example_node.cpp
mock/context_gamma_scenarios/: CMakeLists.txt  context_gamma_scenarios_ament_cmake-extras.cmake  package.xml
mock/context_gamma_scenarios/cmake/: add_context_gamma_scenario_test.cmake
mock/context_gamma_scenarios/launch/: mock_test.launch.py
mock/context_gamma_scenarios/rviz/: mock_test.rviz
mock/context_gamma_scenarios/src/: context_gamma_scenario_node.cpp  traffic_simulation_demo.cpp
mock/cpp_mock_scenarios/: CHANGELOG.rst  CMakeLists.txt  cpp_mock_scenarios_ament_cmake-extras.cmake  package.xml
mock/cpp_mock_scenarios/cmake/: add_cpp_mock_scenario_test.cmake
mock/cpp_mock_scenarios/launch/: idiot_npc.launch.py  manual_drive_kashiwanoha.launch.py  mock_base.launch.py  mock_test.launch.py  view_kashiwanoha.launch.py
mock/cpp_mock_scenarios/rviz/: mock_test.rviz  view_kashiwanoha.rviz
mock/cpp_mock_scenarios/src/: cpp_scenario_node.cpp  idiot_npc.cpp  manual_drive_kashiwanoha.cpp  (+2 more)
open_scenario_interpreter/: CMakeLists.txt  README.md  package.xml
open_scenario_interpreter/config/: default.rviz
open_scenario_interpreter/example/: lane_change.xosc
open_scenario_interpreter/launch/: open_scenario_interpreter.launch.py
open_scenario_interpreter/src/: accessor.cpp  object.cpp  open_scenario_interpreter.cpp  open_scenario_interpreter_node.cpp  procedure.cpp
open_scenario_interpreter/test/: success.xosc  test_syntax.cpp
openscenario_msgs/: CMakeLists.txt  package.xml
scenario_runner/: CMakeLists.txt  README.md  package.xml
scenario_runner/example/: lane_change.xosc
scenario_runner/launch/: scenario_runner.launch  scenario_runner.launch.py
scenario_runner/src/: object.cpp  scenario_runner.cpp  scenario_runner_node.cpp
scenario_runner/test/: example.xosc  lexical-scope.xosc  success.xosc  test_syntax.cpp  unit_test.cpp  unit_test.test
scenario_simulator/: CMakeLists.txt  README.md  package.xml
scenario_simulator/config/: scenario_simulator.rviz
scenario_simulator/src/: scenario_simulator.cpp  scenario_simulator_impl.cpp  scenario_simulator_node.cpp  xmlrpc_method.cpp
scenario_simulator_v2/: CHANGELOG.rst  CMakeLists.txt  package.xml
simulation_controller/: CMakeLists.txt  package.xml
simulation_controller/config/: moc_test.rviz
simulation_controller/launch/: mock_test.launch.py
simulation_controller/resource/: pedestrian_entity_behavior.xml  vehicle_entity_behavior.xml
simulation_controller/test/: test_simulation_controller.test
spline_interpolation/: CMakeLists.txt  package.xml
spline_interpolation/src/: spline_interpolation.cpp
xmlrpcpp/: CMakeLists.txt
xmlrpcpp/src/: XmlRpcClient.cpp  XmlRpcDispatch.cpp  XmlRpcServer.cpp  XmlRpcServerConnection.cpp  XmlRpcServerMethod.cpp  XmlRpcSocket.cpp  XmlRpcSource.cpp  XmlRpcUtil.cpp  XmlRpcValue.cpp
(+3486 files in other folders)
