[tool.poetry]
name = "docs"
version = "0.7.0"
description = "A scenario-based simulation framework for Autoware"
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.0"
mkdocs-material = "^9.1.19"
pymdown-extensions = "^10.1"
fontawesome-markdown = "^0.2.6"
markdown = "3.3.0"
python-markdown-math = "^0.8"
plantuml-markdown = "^3.9.2"
mkdocs-codeinclude-plugin = "^0.2.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
plantuml = "^0.3.0"
mkdocs-redirects = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
