<?xml version="1.0"?>
<package format="3">
  <name>spline_interpolation</name>
  <version>0.1.0</version>
  <description>The spline interpolation package</description>
  <maintainer email="fumiya.watanabe@tier4.jp">Fumiya Watanabe</maintainer>
  <author email="fumiya.watanabe@tier4.jp">Fumiya Watanabe</author>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
