<?xml version="1.0"?>
<package format="2">
  <name>best_model_launch</name>
  <version>0.1.0</version>
  <description>The j6_gen2_launch package</description>

  <maintainer email="tomohito.ando@tier4.jp">Tomohito Ando</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_raw_vehicle_cmd_converter</exec_depend>
  <exec_depend>individual_params</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
